# stonerplots

./: .gitattributes  .gitignore  .markdownlint.json  BUGS.md  BUGS_MIGRATION_SUMMARY.md  CHANGES.md  CODE_REVIEW_README.md  CODE_REVIEW_SUMMARY.md  COVERAGE_REPORT.md  ISSUES_TO_CREATE.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md  mypy-env.yml
.github/workflows/: build_conda.yaml  mypy.yaml  publish_sphinx.yaml  pytest-env.yml  pytest.yaml
docs/: Makefile  TEMPLATE.md  requirements.txt
docs/source/: api.rst  centredaxes.rst  colours.rst  conf.py  doubleyaxis.rst  dpubleyaxis.rst  index.rst  insetplot.rst  multipanel.rst  plotlabeller.rst  savedfigure.rst  stackvertical.rst  style-gallery.rst  userguide.rst
docs/source/api/: stonerplots.CentredAxes.rst  stonerplots.DoubleYAxis.rst  stonerplots.InsetPlot.rst  stonerplots.MultiPanel.rst  stonerplots.PlotLabeller.rst  stonerplots.SavedFigure.rst  stonerplots.StackVertical.rst  stonerplots.TexEngFormatter.rst  stonerplots.TexFormatter.rst  stonerplots.counter.rst  stonerplots.roman.rst
examples/: plot-examples.py
examples/plot_examples/: __init__.py  common.py  dark_plot.py  default_plot-double-y-one-colour.py  default_plot-double-y.py  default_plot.py  default_plot_aip.py  default_plot_aps.py  default_plot_aps_1_5_column.py  default_plot_aps_2_column.py  default_plot_bright.py  default_plot_centre_axes.py  default_plot_defaults.py  default_plot_extra_context.py  default_plot_high_contrast.py  default_plot_high_vis.py  default_plot_ieee.py  default_plot_iop.py  default_plot_labeller.py  default_plot_latex.py  default_plot_light.py  default_plot_muted.py  default_plot_nature.py  default_plot_retro.py  default_plot_reuse.py  default_plot_science.py  default_plot_std_colours.py  default_plot_thesis.py  default_plot_vibrant.py  default_plot_with_extra.py  grid_plot.py  hi_res_plot.py  inset_plot.py  med_res_plot.py  multi_panel_plot-presentation.py  multi_panel_plot.py  notebook_plot.py  penta_plot.py  poster_plot.py  presentation_plot.py  (+8 more)
recipe/: build-env.yml  meta.yaml
src/stonerplots/: __init__.py  colours.py  context.py  counter.py  format.py  path_security.py  util.py
src/stonerplots/context/: __init__.py  base.py  double_y.py  inset_plot.py  multiple_plot.py  noframe.py  save_figure.py
src/stonerplots/styles/: poster.mplstyle  presentation.mplstyle  presentation_sm.mplstyle  stoner.mplstyle  thesis.mplstyle
src/stonerplots/styles/color/: stoner_dark.mplstyle
src/stonerplots/styles/journals/: aaas-science.mplstyle  aip.mplstyle  aps.mplstyle  ieee.mplstyle  iop.mplstyle  nature.mplstyle
src/stonerplots/styles/modifiers/: aip2.mplstyle  aps1.5.mplstyle  aps2.mplstyle  hi-res.mplstyle  latex.mplstyle  med-res.mplstyle  presentation_dark.mplstyle  presentation_sm.mplstyle  science-2col.mplstyle  science-3col.mplstyle  thesis-sm.mplstyle
tests/: pytest-env.yaml
tests/stonerplots/: test_coverage_improvements.py  test_error_conditions.py  test_exampl;es.py  test_examples.py  test_format_fixes.py  test_path_validation.py
