[project]
name = "StonerPlots"
dynamic = ["version"]
authors = [
  { name="Gavin Burnell", email="G.Burnell@leeds.ac.uk" },
]
description = "This is a fork of scienceplots and provides a range of matplotlib styles for plotting physics..."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "matplotlib-style-sheets",
    "matplotlib-figures",
    "scientific-papers",
    "thesis-template",
    "matplotlib-styles",
    "python",
]

[project.urls]
Homepage = "https://github.com/stonerlab/stonerplots/"
Issues = "https://github.com/stonerlab/stonerplots/issues"

[build-system]
requires = ["setuptools>=65.0", "setuptools-scm>=8.0" ]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "stonerplots.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
