[project]
name = "StonerPlots"
dynamic = ["version"]
authors = [
  { name="Gavin Burnell", email="G.Burnell@leeds.ac.uk" },
]
description = "This is a fork of scienceplots and provides a range of matplotlib styles for plotting physics..."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "matplotlib-style-sheets",
    "matplotlib-figures",
    "scientific-papers",
    "thesis-template",
    "matplotlib-styles",
    "python",
]

[project.urls]
Homepage = "https://github.com/stonerlab/stonerplots/"
Issues = "https://github.com/stonerlab/stonerplots/issues"

[build-system]
requires = ["setuptools>=65.0", "setuptools-scm>=8.0" ]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "stonerplots.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | _build
    | build
    | dist
  )/
)
'''

[tool.coverage.run]
source = ["src/stonerplots"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "numpy.*",
    "mpl_toolkits.*",
]
ignore_missing_imports = true
